debicn/control: new maintainer

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dvdisaster (0.72.1-1) unstable; urgency=low
+
+  * New maintainer (Closes: 543876)
+  * new upstream version.
+
+ -- TANIGUCHI Takaki <takaki@debian.org>  Sun, 22 Nov 2009 16:54:12 +0900
+
 dvdisaster (0.72-2) unstable; urgency=low
 
   * Updating to standards version 3.8.3.
