debian/contrl: update Homepage; debian/README.source: create

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ dvdisaster (0.72.1-1) unstable; urgency=low
 
   * New maintainer (Closes: 543876)
   * new upstream version.
+  * debian/control: update Homepage:
+  * debian/README.source: create 
 
- -- TANIGUCHI Takaki <takaki@debian.org>  Sun, 22 Nov 2009 16:54:12 +0900
+ -- TANIGUCHI Takaki <takaki@debian.org>  Sun, 22 Nov 2009 18:09:15 +0900
 
 dvdisaster (0.72-2) unstable; urgency=low
 
