--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,14 @@
-dvdisaster (0.72.3-1~1.gbp71e851) UNRELEASED; urgency=low
-
-  ** SNAPSHOT build @71e85133ab37056a4ae351205f2114cf1e44ff14 **
+dvdisaster (0.72.3-1~2.gbp71e851) UNRELEASED; urgency=low
 
   [ Rogério Brito ]
-  * Imported Upstream version 0.79.2
-  * Imported Upstream version 0.79.3
   * debian/patches/*: refresh and adapt every patch
   * debian/patches/04-manpage.patch: escape one hyphen
 
   [ TANIGUCHI Takaki ]
-  * Imported Upstream version 0.72.3
+  * New upstream 0.72.3 (Closes: #643869)
+  * Bump Standards-Version to 3.9.3
+  * debian/patches/*: Refreshed.
+  * Depend unversion libpng-dev (Closes: #662306)
 
  -- Rogério Brito <rbrito@ime.usp.br>  Tue, 06 Mar 2012 11:08:23 +0900
 
