--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dvdisaster (0.79.5-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Bump Standards Version to 4.0.0.
+
+ -- Carlos Maddela <e7appew@gmail.com>  Sat, 05 Aug 2017 20:03:21 +1000
+
 dvdisaster (0.79.5-1) unstable; urgency=medium
 
   [ Carlos Maddela ]
