--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dvdisaster (0.79.5-2) UNRELEASED; urgency=medium
   * Bump Standards Version to 4.0.0.
   * Remove unnecessary calls to dpkg-parsechangelog from debian/rules.
   * debian/watch: Avoid repacking upstream tarballs unnecessarily.
+  * Fix more typos in error messages and docs.
 
  -- Carlos Maddela <e7appew@gmail.com>  Sat, 05 Aug 2017 20:03:21 +1000
 
