--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dvdisaster (0.79.5-2) UNRELEASED; urgency=medium
   * Fix more typos in error messages and docs.
   * Fix FTBFS on Hurd and kFreeBSD.
   * Remove incorrect use of 'Origin: vendor' from DEP-3 patch headers.
+  * Improve support for Hurd and kFreeBSD systems, although Hurd still
+    builds without SCSI.
 
  -- Carlos Maddela <e7appew@gmail.com>  Sat, 05 Aug 2017 20:03:21 +1000
 
