--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ dvdisaster (0.79.5-2) UNRELEASED; urgency=medium
   * Remove incorrect use of 'Origin: vendor' from DEP-3 patch headers.
   * Improve support for Hurd and kFreeBSD systems, although Hurd still
     builds without SCSI.
+  * Mark bug, which we should have done in previous release, as closed.
+    (Closes: #838294)
 
  -- Carlos Maddela <e7appew@gmail.com>  Sat, 05 Aug 2017 20:03:21 +1000
 
