--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dvdisaster (0.79.5-2) UNRELEASED; urgency=medium
+dvdisaster (0.79.5-2) experimental; urgency=medium
 
   * Team upload.
   * Bump Standards Version to 4.0.0.
@@ -12,7 +12,7 @@ dvdisaster (0.79.5-2) UNRELEASED; urgency=medium
   * Mark bug, which we should have done in previous release, as closed.
     (Closes: #838294)
 
- -- Carlos Maddela <e7appew@gmail.com>  Sat, 05 Aug 2017 20:03:21 +1000
+ -- Carlos Maddela <e7appew@gmail.com>  Sun, 06 Aug 2017 18:00:54 +1000
 
 dvdisaster (0.79.5-1) unstable; urgency=medium
 
