--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dvdisaster (0.79.5-3) UNRELEASED; urgency=medium
   * Regenerate patches with git version 2.14.0.
   * Do not suppress the display of compilation commands,
     so that build logs may be analysed by blhc.
+  * Update uploaders list.
 
  -- Carlos Maddela <e7appew@gmail.com>  Tue, 08 Aug 2017 03:13:26 +1000
 
