--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ dvdisaster (0.79.5-4) UNRELEASED; urgency=medium
   * Drop redundant dependency on dpkg-dev.
   * Reproducibly generate PDF documentation from TeX sources.
   * Remove trailing white space from debian/changelog.
+  * Remove unnecessary Testsuite header from debian/control.
 
  -- Carlos Maddela <e7appew@gmail.com>  Mon, 14 Aug 2017 23:04:38 +1000
 
