Honour LDFLAGS set by dpkg-buildflags in building all binaries.
Unpackaged simple-md5sum utility must do so as well, to keep blhc happy.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ dvdisaster (0.79.5-4) UNRELEASED; urgency=medium
   * Remove unnecessary Testsuite header from debian/control.
   * Indicate compliance with Debian Policy 4.1.2.
   * Suppress debian-watch-uses-insecure-uri Lintian warning.
+  * Honour LDFLAGS set by dpkg-buildflags in building all binaries.
 
  -- Carlos Maddela <e7appew@gmail.com>  Mon, 14 Aug 2017 23:04:38 +1000
 
