--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dvdisaster (0.79.5-4) UNRELEASED; urgency=medium
+dvdisaster (0.79.5-4) unstable; urgency=medium
 
   * Use complete Debian revision number as build number, instead of
     just the numeric part.
@@ -16,7 +16,7 @@ dvdisaster (0.79.5-4) UNRELEASED; urgency=medium
   * Suppress debian-watch-uses-insecure-uri Lintian warning.
   * Honour LDFLAGS set by dpkg-buildflags in building all binaries.
 
- -- Carlos Maddela <e7appew@gmail.com>  Mon, 14 Aug 2017 23:04:38 +1000
+ -- Carlos Maddela <e7appew@gmail.com>  Thu, 21 Dec 2017 03:14:14 +1100
 
 dvdisaster (0.79.5-3) unstable; urgency=medium
 
