--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-dvdisaster (0.79.6-1) UNRELEASED; urgency=medium
+dvdisaster (0.79.6-1) experimental; urgency=medium
 
   * New upstream development version [0.79.6].
   * Rebase patches.
 
- -- Carlos Maddela <e7appew@gmail.com>  Thu, 21 Dec 2017 05:34:22 +1100
+ -- Carlos Maddela <e7appew@gmail.com>  Thu, 21 Dec 2017 05:51:54 +1100
 
 dvdisaster (0.79.5-4) unstable; urgency=medium
 
