--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-dvdisaster (0.79.5-5) UNRELEASED; urgency=medium
+dvdisaster (0.79.5-5) unstable; urgency=medium
 
   * Update Vcs-* to salsa.debian.org
+  * Bump Standards-Version to 4.1.3
 
- -- TANIGUCHI Takaki <takaki@debian.org>  Sat, 27 Jan 2018 23:33:03 +0900
+ -- TANIGUCHI Takaki <takaki@debian.org>  Sat, 27 Jan 2018 23:34:08 +0900
 
 dvdisaster (0.79.5-4) unstable; urgency=medium
 
