--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dvdisaster (0.79.5-6) UNRELEASED; urgency=medium
+
+  [ TANIGUCHI Takaki ]
+  * change Vcs-* path
+
+ -- Carlos Maddela <e7appew@gmail.com>  Sat, 23 Jun 2018 02:58:35 +1000
+
 dvdisaster (0.79.5-5) unstable; urgency=medium
 
   * Update Vcs-* to salsa.debian.org
