--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,10 @@ dvdisaster (0.79.5-6) UNRELEASED; urgency=medium
   [ TANIGUCHI Takaki ]
   * change Vcs-* path
 
- -- Carlos Maddela <e7appew@gmail.com>  Sat, 23 Jun 2018 02:58:35 +1000
+  [ Carlos Maddela ]
+  * Build with DH compat level 11.
+
+ -- Carlos Maddela <e7appew@gmail.com>  Sat, 23 Jun 2018 03:03:56 +1000
 
 dvdisaster (0.79.5-5) unstable; urgency=medium
 
