--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dvdisaster (0.79.5-6) UNRELEASED; urgency=medium
 
   [ Carlos Maddela ]
   * Build with DH compat level 11.
+  * Indicate compliance with Debian Policy 4.1.4.
 
  -- Carlos Maddela <e7appew@gmail.com>  Sat, 23 Jun 2018 03:03:56 +1000
 
