--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dvdisaster (0.79.6-2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Carlos Maddela <e7appew@gmail.com>  Sat, 23 Jun 2018 05:09:58 +1000
+
 dvdisaster (0.79.6-1) experimental; urgency=medium
 
   * New upstream development version [0.79.6].
