--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dvdisaster (0.79.5-7) UNRELEASED; urgency=medium
   * Simplify process by which mutable files are backed up and restored.
   * Build as verbosely as possible.
   * Fix location of manual.
+  * Fix dh_auto_build overrides to take advantage of parallel builds.
 
  -- Carlos Maddela <e7appew@gmail.com>  Thu, 31 Jan 2019 03:58:19 +1100
 
