--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ dvdisaster (0.79.5-7) UNRELEASED; urgency=medium
   * Build as verbosely as possible.
   * Fix location of manual.
   * Fix dh_auto_build overrides to take advantage of parallel builds.
+  * Fix format security compilation warning in GCC-8.
 
  -- Carlos Maddela <e7appew@gmail.com>  Thu, 31 Jan 2019 03:58:19 +1100
 
