Add support for nodoc build profile.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ dvdisaster (0.79.5-7) UNRELEASED; urgency=medium
     http://dvdisaster.net has been unavailable for a while now.
     Not certain if this is permanent though, as the domain name still
     exists for mail.
+  * Add support for nodoc build profile.
 
  -- Carlos Maddela <e7appew@gmail.com>  Thu, 31 Jan 2019 03:58:19 +1100
 
