--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ dvdisaster (0.79.5-7) UNRELEASED; urgency=medium
     Not certain if this is permanent though, as the domain name still
     exists for mail.
   * Add support for nodoc build profile.
+  * Add more details to upstream metadata.
 
  -- Carlos Maddela <e7appew@gmail.com>  Thu, 31 Jan 2019 03:58:19 +1100
 
