--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ dvdisaster (0.79.5-7) UNRELEASED; urgency=medium
     exists for mail.
   * Add support for nodoc build profile.
   * Add more details to upstream metadata.
+  * Indicate compliance with Debian Policy 4.3.0.
 
  -- Carlos Maddela <e7appew@gmail.com>  Thu, 31 Jan 2019 03:58:19 +1100
 
