Update gbp.conf for debian/experimental branch.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dvdisaster (0.79.6-3) UNRELEASED; urgency=medium
 
   * Merge changes from 0.79.5-7.
+  * Update gbp.conf for debian/experimental branch.
 
  -- Carlos Maddela <e7appew@gmail.com>  Thu, 31 Jan 2019 08:52:02 +1100
 
