--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-dvdisaster (0.79.6-4) UNRELEASED; urgency=medium
+dvdisaster (0.79.6-4) experimental; urgency=medium
 
   * Merge changes from 0.79.5-8.
 
- -- Carlos Maddela <e7appew@gmail.com>  Fri, 01 Feb 2019 23:09:59 +1100
+ -- Carlos Maddela <e7appew@gmail.com>  Fri, 01 Feb 2019 23:13:16 +1100
 
 dvdisaster (0.79.6-3) experimental; urgency=medium
 
