--- a/debian/changelog
+++ b/debian/changelog
@@ -38,7 +38,7 @@ dvdisaster (0.79.6-1) experimental; urgency=medium
   * Rebase patches.
 
  -- Carlos Maddela <e7appew@gmail.com>  Thu, 21 Dec 2017 05:51:54 +1100
-dvdisaster (0.79.5-9) UNRELEASED; urgency=medium
+dvdisaster (0.79.5-9) unstable; urgency=medium
 
   * Make sure that the upstream changelog remains uncompressed so
     that the application can display it.
