--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-dvdisaster (0.79.5-9) UNRELEASED; urgency=medium
+dvdisaster (0.79.5-9) unstable; urgency=medium
 
   * Make sure that the upstream changelog remains uncompressed so
     that the application can display it.
   * Suggest to install dvdisaster-doc in error message, if the PDF manual
     cannot be found.
 
- -- Carlos Maddela <e7appew@gmail.com>  Sat, 02 Feb 2019 13:32:34 +1100
+ -- Carlos Maddela <e7appew@gmail.com>  Sat, 02 Feb 2019 15:20:23 +1100
 
 dvdisaster (0.79.5-8) unstable; urgency=medium
 
