--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dvdisaster (0.79.6-6) UNRELEASED; urgency=medium
 
   * Use secure URI in debian/watch.
   * Update standards version, no changes needed.
+  * Set debhelper-compat version in Build-Depends.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 06 Aug 2019 16:08:20 +0000
 
